...
            </CustomText>
          </View>
          {!skipMode && (
            <View style={styles.amountContainer}>
              <CustomText
                style={styles.savedText}
                testID="selectedLocationText"
              >
                {i18n.t("You've_saved")}
              </CustomText>
              <CustomText
                style={styles.amountText}
                testID="selectedLocationText"
...
          )}
        </View>

        <TouchableOpacity
          onPress={onOpenLocation}
          style={styles.locationContainer}
          testID="selectedLocationButton"
        >
          <CustomText style={styles.locationText} testID="selectedLocationText">
            {selectedLocation?.name ?? i18n.t("select_a_location")}
          </CustomText>
          <Image
            source={require("@assets/images/arrow_down.png")}
...
