...
  layout,
  updateLayout,
  onUpdateLayoutRequest,
}: any) => {
  return (
    <View
      testID="profileScreen"
      style={[styles.mainContainer, getFlipForRTLStyle()]}
    >
      <View style={styles.flex1}>
        <Header
          title={i18n.t("My Profile")}
          onPressBack={onPressLeftButtonHandler}
...
                        <CustomText style={styles.userSaving}>
                          {currUser?.savings > 0 ? currUser.savings : "0"}
                        </CustomText>
                      </View>

                      <TouchableOpacity
                        testID="savingBreakdown"
                        onPress={onClickViewBreakDown}
                      >
                        <CustomText style={styles.savingBreakdown}>
                          {i18n.t("View savings breakdown")}
                        </CustomText>
                      </TouchableOpacity>
...
