...
  shouldComponentUpdate = (nextProps) => {
    return nextProps.isVisible !== this.props.isVisible;
  };
  render() {
    const { isVisible } = this.props;
    return isVisible ? (
      <View style={styles.centeredView} testID={"loader"}>
        <Image
          style={{
            height: 65,
            width: 65,
            borderRadius: 10,
          }}
...
