...
    );
  };

  const headerRightComponent = () => {
    return (
      <TouchableOpacity
        testID={"headerRightButton"}
        activeOpacity={1}
        onPress={() => {
          props.onPressRightButton();
        }}
        style={{ marginRight: 8 }}
      >
...
